--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
       </p>
       <div class="contato">
         <h3>Contato</h1>
-        <b>Email: </b><a href="mailto:">gabbrielaroc@gmail.com</a><br>
-        <b>Github: </b><a href="https://github.com/yapolu">yapolu</a>
+        <b>Email: </b><a href="mailto:" target="_blank">gabbrielaroc@gmail.com</a><br>
+        <b>Github: </b><a href="https://github.com/yapolu" target="_blank">yapolu</a>
       </div>
       <a href="curriculo.html" target="_self"><button class="botaoIndex">Acesse meu Currículo</button></a>
       <a href="portifolio.html" target="_self"><button class="botaoIndex">Acesse meu Portfolio</button></a>
